# microfactory

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  config.yaml  deny.toml
.github/workflows/: rust.yml
docs/: user_guide.md
docs/arch/: architecture.md
docs/paper/: 2511.09030v1.docx  2511.09030v1.md
docs/plans/: TASK-012.md  TASK-014-FIXUP.md  TASK-014-clean-architecture.md  TASK-015.md
docs/plans/TASK-012/example-fixtures/: rig-openai-decomposition-input.jsonl  rig-openai-decomposition-subtask-greet-input.jsonl  rig-openai-decomposition-vote-output.jsonl  rig-openai-solution-vote-candidates-with-xml.jsonl  rig-openai-solver-xml-in-template-input.jsonl
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: cli_inspect.rs  cli_logging.rs  cli_status.rs  resume_flow.rs  serve_endpoints.rs
scripts/: clean_sessions.sh  run_all_tests.sh  run_integration_tests.sh  run_unit_tests.sh
src/: cli.rs  config.rs  context.rs  lib.rs  llm.rs  main.rs  paths.rs  persistence.rs  red_flaggers.rs  runner.rs  server.rs  status_export.rs  tracing_inspect.rs  tracing_setup.rs  utils.rs
src/adapters/: mod.rs  persistence.rs
src/adapters/inbound/: mod.rs
src/adapters/inbound/cli/: definitions.rs  help.rs  mod.rs
src/adapters/inbound/server/: mod.rs
src/adapters/outbound/: clock.rs  filesystem.rs  llm.rs  mod.rs  persistence.rs  telemetry.rs  templating.rs
src/application/: mod.rs  runner.rs  service.rs
src/application/tasks/: mod.rs
src/core/: config.rs  domain.rs  error.rs  mod.rs  ports.rs
src/core/ports/: inbound.rs  mod.rs  outbound.rs
src/tasks/: mod.rs
templates/: analysis_decompose.hbs  analysis_decompose_vote.hbs  analysis_solution_vote.hbs  analysis_solve_step.hbs  code_decompose.hbs  code_decompose_vote.hbs  code_solution_vote.hbs  code_solve_step.hbs
xtask/: Cargo.toml
xtask/src/: cargo_deny.rs  main.rs
