[package]
name = "microfactory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
handlebars = "4.5"
petgraph = "0.6"
rig = { version = "0.24.0", package = "rig-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strsim = "0.11"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.10", features = ["v4"] }
axum = { version = "0.7", features = ["json", "macros", "sse"] }
tokio-stream = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
uuid = { version = "1.10", features = ["v4"] }
tower = "0.4"
