[package]
name = "microfactory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
handlebars = "4.5"
petgraph = "0.6"
rig = { version = "0.24.0", package = "rig-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strsim = "0.11"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.18", features = ["v4"] }
axum = { version = "0.8", features = ["json", "macros", "tokio"] }
tokio-stream = "0.1"
tree-sitter = "0.25.10"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-rust = "0.24.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
regex = "1.12.2"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23"
uuid = { version = "1.18", features = ["v4"] }
tower = { version = "0.5", features = ["util"] }

[workspace]
members = [
    "integration-tests",
]
resolver = "2"
