[package]
name = "microfactory"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
handlebars = "6.3"
petgraph = "0.8"
rig = { version = "0.27.0", package = "rig-core" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
strsim = "0.11"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.19", features = ["v4"] }
axum = { version = "0.8", features = ["json", "macros", "tokio"] }
tokio-stream = "0.1"
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-rust = "0.24.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
regex = "1.12.2"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23"
uuid = { version = "1.19", features = ["v4"] }
tower = { version = "0.5", features = ["util"] }

[workspace]
members = [
    "integration-tests",
    "xtask",
]
resolver = "2"
