[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
assert_cmd = "2.1"
predicates = "3.1"
microfactory = { path = ".." }
serde_json = "1.0"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
futures-util = "0.3"
